--- a/test_api.ipynb
+++ b/test_api.ipynb
@@ -105,14 +105,14 @@
     }
    ],
    "source": [
-    "def test_products(token):\n",
+    "def test_products():\n",
     "    url = \"http://localhost:5000/products\"\n",
-    "    headers = {\"Authorization\": f\"Bearer {token}\"}\n",
+    "    headers = {}\n",
     "    response = requests.get(url, headers=headers)\n",
     "    assert response.status_code == 200\n",
     "    print(\"View products test passed.\", response.json())\n",
     "\n",
-    "test_products(token)"
+    "test_products()"
    ]
   },
   {
@@ -129,15 +129,21 @@
     }
    ],
    "source": [
-    "def test_product_details(token, item_id=1):\n",
+    "def test_product_details(item_id=1):\n",
     "    url = f\"http://localhost:5000/product/{item_id}\"\n",
-    "    headers = {\"Authorization\": f\"Bearer {token}\"}\n",
+    "    headers = {}\n",
     "    response = requests.get(url, headers=headers)\n",
     "    assert response.status_code == 200\n",
     "    print(\"View product details test passed.\", response.json())\n",
     "\n",
-    "if token:\n",
-    "    test_product_details(token)"
+    "test_product_details()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Normal Auth Required"
    ]
   },
   {
